--- a/LogImporter/Properties/Resources.resx
+++ b/LogImporter/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="CreateStagingTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CreateStagingTable.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="MergeFromStaging" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MergeFromStaging.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
